src/objects/Regional_Admins__c.object
<CustomObject>
    <fields>
        <fullName>Backup1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup FCE\REP #1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_Admin1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backup2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup FCE\REP #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_Admin2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backup3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup FCE\REP #3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_Admin3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_FCE_REP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary FCE\REP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_Admin</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Regional Admin</label>
    <nameField>
        <label>Region</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regional Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>